Another spacing fix

--- a/source/_assets/sass/_navigation.scss
+++ b/source/_assets/sass/_navigation.scss
@@ -1,5 +1,5 @@
 .nav-menu {
-    @apply .-mt-12;
+    @apply .-mt-8;
     @apply .-mx-8;
     @apply .bg-gray-200;
     @apply .mb-8;
